--- a/_posts/2014-12-3-第一篇blog.md
+++ b/_posts/2014-12-3-第一篇blog.md
@@ -2,9 +2,9 @@
 layout: post
 title: 第一篇blog
 ---
-经过一天的捣鼓我终于找到了一个快速搭建Jekyll on Github Pages式(姑且先让我这么称呼)blog的方案，关于具体如何做，我将在下篇blog中介绍。
+经过一天的摸索，我终于成功地搭建了一个Jekyll on Github Pages式(姑且先让我这么称呼)blog，关于具体如何做，我将在下篇blog中介绍。
 
->这个虚线框以下的内容是我这个Jekyll模版/主题的自我介绍，有关模版作者信息和文档写作的格式符号介绍
+>这个虚线框以下的内容是我这个Jekyll模版/主题的自我介绍，有关模版作者信息和文档写作文法。
 
 Scribble is a [Jekyll](http://jekyllrb.com/) theme, created by [Mu-An](http://muan.co/) and modify by [Rei](http://chloerei.com/).
 
